--- a/devtemplate/calendar/tmpls/month.html
+++ b/devtemplate/calendar/tmpls/month.html
@@ -1,6 +1,6 @@
 <div class="cal-row-fluid cal-row-head">
 	<% _.each(days_name, function(name){ %>
-		<div class="cal-cell1"><%= name %></div>
+		<div class="cal-cell1 table-month-th"><%= name %></div>
 	<% }) %>
 </div>
 <div class="cal-month-box">
