--- a/devtemplate/calendar/tmpls/month.html
+++ b/devtemplate/calendar/tmpls/month.html
@@ -17,3 +17,10 @@
 		</div>
 	<% } %>
 </div>
+<div>
+		<i class="glyphicon glyphicon-record">Marketing & Lead Generation</i>
+		<i class="glyphicon glyphicon-stop">Incoming & Outgoing Register</i>
+		<i class="glyphicon glyphicon-triangle-top">Management System Audit</i>
+		<i class="glyphicon glyphicon-star">Project Register</i>
+		<i class="glyphicon glyphicon-briefcase">Inquiry and Tender</i>
+</div>
