report and calendar legends styling

--- a/devtemplate/calendar/tmpls/month.html
+++ b/devtemplate/calendar/tmpls/month.html
@@ -18,9 +18,21 @@
 	<% } %>
 </div>
 <div>
-		<i class="glyphicon glyphicon-record">Marketing & Lead Generation</i>
-		<i class="glyphicon glyphicon-stop">Incoming & Outgoing Register</i>
-		<i class="glyphicon glyphicon-triangle-top">Management System Audit</i>
-		<i class="glyphicon glyphicon-star">Project Register</i>
-		<i class="glyphicon glyphicon-briefcase">Inquiry and Tender</i>
+	<ul class="list-inline mt-3">
+		<li>
+			<h6 class="text-muted"><i class="glyphicon glyphicon-record m-r-5 text-info"></i>Marketing & Lead Generation</h6>
+		</li>
+		<li>
+			<h6 class="text-muted"><i class="glyphicon glyphicon-stop m-r-5 text-info"></i>Incoming & Outgoing Register</h6>
+		</li>
+		<li>
+			<h6 class="text-muted"><i class="glyphicon glyphicon-triangle-top m-r-5 text-info"></i>Management System Audit</h6>
+		</li>
+		<li>
+			<h6 class="text-muted"><i class="glyphicon glyphicon-star m-r-5 text-info"></i>Project Register</h6>
+		</li>
+		<li>
+			<h6 class="text-muted"><i class="glyphicon glyphicon-briefcase m-r-5 text-info"></i>Inquiry and Tender</h6>
+		</li>
+	</ul>
 </div>
