--- a/devtemplate/calendar/tmpls/month.html
+++ b/devtemplate/calendar/tmpls/month.html
@@ -20,19 +20,33 @@
 <div>
 	<ul class="list-inline mt-3">
 		<li>
-			<h6 class="text-muted"><i class="glyphicon glyphicon-record m-r-5 text-info"></i>Marketing & Lead Generation</h6>
+			<h6 class="text-muted"><i class="glyphicon glyphicon-record m-r-5"></i>Marketing & Lead Generation</h6>
 		</li>
 		<li>
-			<h6 class="text-muted"><i class="glyphicon glyphicon-stop m-r-5 text-info"></i>Incoming & Outgoing Register</h6>
+			<h6 class="text-muted"><i class="glyphicon glyphicon-stop m-r-5"></i>Incoming & Outgoing Register</h6>
 		</li>
 		<li>
-			<h6 class="text-muted"><i class="glyphicon glyphicon-triangle-top m-r-5 text-info"></i>Management System Audit</h6>
+			<h6 class="text-muted"><i class="glyphicon glyphicon-triangle-top m-r-5"></i>Management System Audit</h6>
 		</li>
 		<li>
-			<h6 class="text-muted"><i class="glyphicon glyphicon-star m-r-5 text-info"></i>Project Register</h6>
+			<h6 class="text-muted"><i class="glyphicon glyphicon-star m-r-5"></i>Project Register</h6>
 		</li>
 		<li>
-			<h6 class="text-muted"><i class="glyphicon glyphicon-briefcase m-r-5 text-info"></i>Inquiry and Tender</h6>
+			<h6 class="text-muted"><i class="glyphicon glyphicon-briefcase m-r-5"></i>Inquiry and Tender</h6>
+		</li>
+	</ul>
+	<ul class="list-inline mt-3">
+		<li>
+			<h6 class="text-muted"><i class="fa fa-circle m-r-5 event-important"></i>Open</h6>
+		</li>
+		<li>
+			<h6 class="text-muted"><i class="fa fa-circle m-r-5 event-info"></i>Ongoing</h6>
+		</li>
+		<li>
+			<h6 class="text-muted"><i class="fa fa-circle m-r-5 event-warning"></i>Pending</h6>
+		</li>
+		<li>
+			<h6 class="text-muted"><i class="fa fa-circle m-r-5 event-success"></i>Closed</h6>
 		</li>
 	</ul>
 </div>
