--- a/devtemplate/hooks/kpi_templateTVS.html
+++ b/devtemplate/hooks/kpi_templateTVS.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="kpi-fo_Section_Caption-<%%VALUE(id)%%>" class="kpi-fo_Section_Caption"><%%VALUE(fo_Section_Caption)%%></td>
-		<td id="kpi-fo_MinRecordRequired-<%%VALUE(id)%%>" class="kpi-fo_MinRecordRequired text-right"><%%VALUE(fo_MinRecordRequired)%%></td>
-		<td id="kpi-fo_TaskCompDuration-<%%VALUE(id)%%>" class="kpi-fo_TaskCompDuration text-right"><%%VALUE(fo_TaskCompDuration)%%></td>
-		<td id="kpi-fo_PercentageAchieved-<%%VALUE(id)%%>" class="kpi-fo_PercentageAchieved text-right"><%%VALUE(fo_PercentageAchieved)%%></td>
+		<td id="kpi-fo_MinRecordRequired-<%%VALUE(id)%%>" class="kpi-fo_MinRecordRequired text-left"><%%VALUE(fo_MinRecordRequired)%%></td>
+		<td id="kpi-fo_TaskCompDuration-<%%VALUE(id)%%>" class="kpi-fo_TaskCompDuration text-left"><%%VALUE(fo_TaskCompDuration)%%></td>
+		<td id="kpi-fo_PercentageAchieved-<%%VALUE(id)%%>" class="kpi-fo_PercentageAchieved text-left"><%%VALUE(fo_PercentageAchieved)%%></td>
 		<td id="kpi-ot_ap_lastmodified-<%%VALUE(id)%%>" class="kpi-ot_ap_lastmodified"><%%VALUE(ot_ap_lastmodified)%%></td>
